tanzu-platform/gitops-environment02/spaces/vmw-explore05-app-db/spring-music01/httproute.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/spring-music01
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: "443"
    healthcheck.gslb.tanzu.vmware.com/service: spring-music01
  name: spring-music01-http-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default-gateway
    sectionName: https-spring-music01
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: spring-music01
      port: 8080
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
